--- a/src_task/index.html
+++ b/src_task/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TRD365</title>
+    <title>React Redux Test</title>
 </head>
 <body>
     <div id="root"></div>
